[package]
name = "helloworld-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
helloworld-common = { path = "../helloworld-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "helloworld"
path = "src/main.rs"
