[package]
name = "kprobe-hashmap-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
kprobe-hashmap-common = { path = "../kprobe-hashmap-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "kprobe-hashmap"
path = "src/main.rs"
