[package]
name = "kprobe-helloworld-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
kprobe-helloworld-common = { path = "../kprobe-helloworld-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "kprobe-helloworld"
path = "src/main.rs"
