[package]
name = "kprobe-ringbuffer-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
kprobe-ringbuffer-common = { path = "../kprobe-ringbuffer-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "kprobe-ringbuffer"
path = "src/main.rs"
