[package]
name = "tracepoint-inode-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tracepoint-inode-common = { path = "../tracepoint-inode-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tracepoint-inode"
path = "src/main.rs"
