[package]
name = "uprobe-helloworld-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
uprobe-helloworld-common = { path = "../uprobe-helloworld-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "uprobe-helloworld"
path = "src/main.rs"
